--- a/specials.html
+++ b/specials.html
@@ -25,7 +25,12 @@
                     <img class="company-logo" src="./images/vfry_logo.svg" alt="vfry fryers logo">
                 </a>
             </div>
-            <ul class="nav-container">
+            <div class="hamburger-menu" id="hamburger" onclick="hamburger()">
+                <div class="line-top"></div>
+                <div class="line-center"></div>
+                <div class="line-bottom"></div>
+            </div>
+            <ul class="nav-container desktop-tablet" id="menu-items">
                 <li><a href="./index.html">home</a></li>
                 <li><a href="./about.html">about</a></li>
                 <li><a href="./team.html">our team</a></li>
@@ -108,5 +113,7 @@
                 Vaishakh Anil Kumar &nbsp; C0877469
             </p>
         </footer>
+
+        <script src="./script/mobileMenu.js"></script>
     </body>
 </html>
