--- a/about.html
+++ b/about.html
@@ -19,15 +19,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">
     </head>
     <body>
+
         <nav>
             <div class="logo-container">
                 <a href="./index.html">
                     <img class="company-logo" src="./images/vfry_logo.svg" alt="vfry fryers logo">
                 </a>
             </div>
-            <ul class="nav-container">
+            <div class="hamburger-menu" id="hamburger" onclick="hamburger()">
+                <div class="line-top"></div>
+                <div class="line-center"></div>
+                <div class="line-bottom"></div>
+            </div>
+            <ul class="nav-container desktop-tablet" id="menu-items">
                 <li><a href="./index.html">home</a></li>
-                <li><a class="active" href="./about.html">about</a></li>
+                <li><a href="./about.html" class="active">about</a></li>
                 <li><a href="./team.html">our team</a></li>
                 <li><a href="./specials.html">specials</a></li>
                 <li><a href="./training.html">training</a></li>
@@ -56,5 +62,8 @@
                 Vaishakh Anil Kumar &nbsp; C0877469
             </p>
         </footer>
+        
+        <!-- Adding Scripts -->
+        <script src="./script/mobileMenu.js"></script>
     </body>
 </html>
