--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
                     <img class="company-logo" src="./images/vfry_logo.svg" alt="vfry fryers logo">
                 </a>
             </div>
-            <ul class="nav-container">
-                <li><a class="active" href="./index.html">home</a></li>
+            <div class="hamburger-menu" id="hamburger" onclick="hamburger()">
+                <div class="line-top"></div>
+                <div class="line-center"></div>
+                <div class="line-bottom"></div>
+            </div>
+            <ul class="nav-container desktop-tablet" id="menu-items">
+                <li><a href="./index.html" class="active">home</a></li>
                 <li><a href="./about.html">about</a></li>
                 <li><a href="./team.html">our team</a></li>
                 <li><a href="./specials.html">specials</a></li>
@@ -37,7 +42,8 @@
 
         <!-- Image Banner -->
         <header class="company-banner-container">
-            <img class="company-banner desktop" src="./images/vfry_desktop_banner.png" alt="AIR FRY. A vfry fryers product. An image of an air fryer.">
+            <img class="company-banner desktop-tablet" src="./images/vfry_desktop_banner.png" alt="AIR FRY. A vfry fryers product. An image of an air fryer.">
+            <img class="company-banner mobile" src="./images/vfry_mobile_banner.png" alt="AIR FRY. A vfry fryers product. An image of an air fryer.">
         </header>
 
         <main>
@@ -51,5 +57,9 @@
                 Vaishakh Anil Kumar &nbsp; C0877469
             </p>
         </footer>
+        
+
+        <!-- Adding Scripts -->
+        <script src="./script/mobileMenu.js"></script>
     </body>
 </html>
