--- a/team.html
+++ b/team.html
@@ -25,10 +25,15 @@
                     <img class="company-logo" src="./images/vfry_logo.svg" alt="vfry fryers logo">
                 </a>
             </div>
-            <ul class="nav-container">
+            <div class="hamburger-menu" id="hamburger" onclick="hamburger()">
+                <div class="line-top"></div>
+                <div class="line-center"></div>
+                <div class="line-bottom"></div>
+            </div>
+            <ul class="nav-container desktop-tablet" id="menu-items">
                 <li><a href="./index.html">home</a></li>
                 <li><a href="./about.html">about</a></li>
-                <li><a class="active" href="./team.html">our team</a></li>
+                <li><a href="./team.html" class="active">our team</a></li>
                 <li><a href="./specials.html">specials</a></li>
                 <li><a href="./training.html">training</a></li>
                 <li><a href="./media.html">media</a></li>
@@ -48,5 +53,8 @@
                 Vaishakh Anil Kumar &nbsp; C0877469
             </p>
         </footer>
+        
+        <!-- Adding Scripts -->
+        <script src="./script/mobileMenu.js"></script>
     </body>
 </html>
