--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
                 <li><a href="./specials.html">specials</a></li>
                 <li><a href="./training.html">training</a></li>
                 <li><a href="./media.html">media</a></li>
-                <li><a href="./faqs.html"  class="active">faqs</a></li>
-                <li><a href="./contact.html">contact us</a></li>
+                <li><a href="./faqs.html">faqs</a></li>
+                <li><a href="./contact.html" class="active">contact us</a></li>
             </ul>
         </nav>
 
