--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </header>
 
         <main>
-            <h1>Welcome to V-FRY Fryers smart air fryers! The new AIR FRY models are now available!</h1>
+            <h1 class="welcome-message">Welcome to V-FRY Fryers smart air fryers! The new AIR FRY models are now available!</h1>
         </main>
 
         <footer>
