Contact Page - basic structure

--- a/about.html
+++ b/about.html
@@ -53,6 +53,8 @@
                     Discover the future of cooking with V-Fry Fryer’s smart air fryers!
                     </p>
             </div>
+
+            
         </main>
 
         <footer>
@@ -64,6 +66,6 @@
         </footer>
         
         <!-- Adding Scripts -->
-        <script src="./script/mobileMenu.js"></script>
+        <script src="./script/script.js"></script>
     </body>
 </html>
