--- a/faqs.html
+++ b/faqs.html
@@ -55,6 +55,6 @@
         </footer>
         
         <!-- Adding Scripts -->
-        <script src="./script/mobileMenu.js"></script>
+        <script src="./script/script.js"></script>
     </body>
 </html>
