--- a/media.html
+++ b/media.html
@@ -56,6 +56,6 @@
 
         
         <!-- Adding Scripts -->
-        <script src="./script/mobileMenu.js"></script>
+        <script src="./script/script.js"></script>
     </body>
 </html>
