--- a/specials.html
+++ b/specials.html
@@ -114,6 +114,6 @@
             </p>
         </footer>
 
-        <script src="./script/mobileMenu.js"></script>
+        <script src="./script/script.js"></script>
     </body>
 </html>
