Media Page - Adding customer reviews

--- a/about.html
+++ b/about.html
@@ -54,6 +54,14 @@
                     </p>
             </div>
 
+            <!-- Our Story -->
+            <div class="our-story">
+
+            </div>
+
+            <!-- Six Reasons -->
+
+            <!-- Our Guarantee -->
             
         </main>
 
