--- a/media.html
+++ b/media.html
@@ -81,7 +81,7 @@
 
                 <div class="audio-container">
                     <div class="customer-card">
-                        <img src="./images/customers/test.webp" alt="" class="customer-image">
+                        <img src="./images/customers/customer-aaron.JPG" alt="" class="customer-image">
                         <h2 >Mr. Aaron</h2>
                         <audio class="audio-review" src="./media/audio/Aaron-review.mp3" controls controlsList="nodownload">
                             <p>Your browser does not support Audio.</p>
@@ -95,7 +95,7 @@
                     </div>
     
                     <div class="customer-card">
-                        <img src="./images/customers/test.webp" alt="" class="customer-image" >
+                        <img src="./images/customers/customer-jim.png" alt="" class="customer-image" >
                         <h2 >Mr. Jim</h2>
                         <audio class="audio-review" src="./media/audio/jim-review.mp3" controls controlsList="nodownload">
                             <p>Your browser does not support Audio.</p>
