--- a/training.html
+++ b/training.html
@@ -5,56 +5,212 @@
     Product: Air Fryers
 -->
 <html lang="en">
-    <head>
-        <title>Training | V-Fry Fryers</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/about.css">
 
-        <!-- Google Fonts: Poppins -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <nav>
-            <div class="logo-container">
-                <a href="./index.html">
-                    <img class="company-logo" src="./images/vfry_logo.svg" alt="vfry fryers logo">
-                </a>
-            </div>
-            <div class="hamburger-menu" id="hamburger" onclick="hamburger()">
-                <div class="line-top"></div>
-                <div class="line-center"></div>
-                <div class="line-bottom"></div>
-            </div>
-            <ul class="nav-container desktop-tablet" id="menu-items">
-                <li><a href="./index.html">home</a></li>
-                <li><a href="./about.html">about</a></li>
-                <li><a href="./team.html">our team</a></li>
-                <li><a href="./specials.html">specials</a></li>
-                <li><a href="./training.html" class="active">training</a></li>
-                <li><a href="./media.html">media</a></li>
-                <li><a href="./faqs.html">faqs</a></li>
-                <li><a href="./contact.html">contact us</a></li>
-            </ul>
-        </nav>
+<head>
+    <title>Training | V-Fry Fryers</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
 
-        <main class="special-container" id="special">
+    <!-- Google Fonts: Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">
+</head>
 
-        </main>
+<body>
+    <nav>
+        <div class="logo-container">
+            <a href="./index.html">
+                <img class="company-logo" src="./images/vfry_logo.svg" alt="vfry fryers logo">
+            </a>
+        </div>
+        <div class="hamburger-menu" id="hamburger" onclick="hamburger()">
+            <div class="line-top"></div>
+            <div class="line-center"></div>
+            <div class="line-bottom"></div>
+        </div>
+        <ul class="nav-container desktop-tablet" id="menu-items">
+            <li><a href="./index.html">home</a></li>
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./team.html">our team</a></li>
+            <li><a href="./specials.html">specials</a></li>
+            <li><a href="./training.html" class="active">training</a></li>
+            <li><a href="./media.html">media</a></li>
+            <li><a href="./faqs.html">faqs</a></li>
+            <li><a href="./contact.html">contact us</a></li>
+        </ul>
+    </nav>
 
-        <footer>
-            <p>
-                &copy; Copyright 2023. All Rights Reserved <br/>
-                <a href="mailto:info@vfry.com">Request Information</a> <br/>
-                Vaishakh Anil Kumar &nbsp; C0877469
-            </p>
-        </footer>
-        
-        <!-- Adding Scripts -->
-        <script src="./script/script.js"></script>
-    </body>
+    <main class="training-container" id="training">
+        <div>
+            <h1>Training & Past Events</h1>
+            <p>Content</p>
+        </div>
+        <div class="table-container">
+            <table>
+                <caption>Product Training Schedule</caption>
+                <tr>
+                    <th>Product</th>
+                    <th>Image</th>
+                    <th>Description</th>
+                    <th>Date</th>
+                    <th>Duration</th>
+                    <th>Cost of Training</th>
+                    <th>Training Link</th>
+                </tr>
+
+                <!-- Row 1 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 2 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 3 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 4 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 5 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 6 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 7 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 8 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+                <!-- Row 9 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+
+                <!-- Row 10 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+
+                <!-- Row 11 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+
+
+                <!-- Row 12 -->
+                <tr>
+                    <td>AIR FRY - Compact</td>
+                    <td><img src="" alt=""></td>
+                    <td></td>
+                    <td>December 20, 2023</td>
+                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td><sup>CAD</sup>$ 200</td>
+                    <td><a href="http://">Video Conference</a></td>
+                </tr>
+            </table>
+        </div>
+    </main>
+
+    <footer>
+        <p>
+            &copy; Copyright 2023. All Rights Reserved <br />
+            <a href="mailto:info@vfry.com">Request Information</a> <br />
+            Vaishakh Anil Kumar &nbsp; C0877469
+        </p>
+    </footer>
+
+    <!-- Adding Scripts -->
+    <script src="./script/script.js"></script>
+</body>
+
 </html>
