--- a/team.html
+++ b/team.html
@@ -42,8 +42,31 @@
             </ul>
         </nav>
 
-        <main class="special-container" id="special">
+        <main class="team-container" id="team">
+            <article>
+                <section>
+                    <h2>Our Story</h2>
+                    <p></p>
+                </section>
+                
+                <section>
+                    <h2>Our Team</h2>
+                    <p></p>
 
+                    <div class="team-gallery">
+                        <div class="team-card">
+                            <div class="profile-picture"></div>
+                            <div class="name"></div>
+                            <div class="position"></div>
+                        </div>
+                    </div>
+                </section>
+
+                <section>
+                    <h2>Join our Team</h2>
+                    <p>We are looking for </p>
+                </section>
+            </article>
         </main>
 
         <footer>
