Adding Favicons to the website

--- a/media.html
+++ b/media.html
@@ -9,6 +9,19 @@
         <title>Media | V-Fry Fryers</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <!-- Adding Author and Description -->
+        <meta name="author" content="Vaishakh Anil Kumar">
+        <meta name="description" content="V-Fry Fryers, founded in the fall of 2023, headquartered in the beautiful place of Sarnia, Ontario.
+        We are on a mission to redefine the cooking experience with our new air fryers. Our AIR FRY
+        series combines the innovative technology with a commitment to health-conscious living.
+        Discover the future of cooking with V-Fry Fryer's smart air fryers!">
+
+        <!-- Adding Favicons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./images/icons/favicon-16x16.png">
+
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/about.css">
         <link rel="stylesheet" href="./css/media.css">
