--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
         <title>Home | V-Fry Fryers</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/style.css">
 
+        <!-- Adding Author and Description -->
+        <meta name="author" content="Vaishakh Anil Kumar">
+        <meta name="description" content="V-Fry Fryers, founded in the fall of 2023, headquartered in the beautiful place of Sarnia, Ontario.
+        We are on a mission to redefine the cooking experience with our new air fryers. Our AIR FRY
+        series combines the innovative technology with a commitment to health-conscious living.
+        Discover the future of cooking with V-Fry Fryer's smart air fryers!">
+
+        <!-- Adding Favicons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./images/icons/favicon-16x16.png">
+
+        
         <!-- Google Fonts: Poppins -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body class="landing-page" id="landing">
         <nav>
