Finished - About Page

--- a/about.html
+++ b/about.html
@@ -56,24 +56,64 @@
         </nav>
 
         <main class="about-container" id="about">
-            <div class="about-vfryer">
-                <h1 class="title">About <span class="vfry-title theme-yellow large-font">V-Fry</span> <span>fryers</span></h1>
+            <div class="full-page-information">
+                <h1 class="title">About <span class="vfry-title theme-yellow">V-Fry</span> <span>fryers</span></h1>
                 <br/>
-                <p>V-Fry Fryers, founded in the fall of 2023, headquartered in the beautiful place of Sarnia, Ontario.
-                    We are on a mission to redefine the cooking experience with our new air fryers. Our AIR FRY
-                    series combines the innovative technology with a commitment to health-conscious living.
+                <p class="description">V-Fry Fryers, founded in the fall of 2023, headquartered in the beautiful place of Sarnia, Ontario.
+                    We are on a mission to redefine the cooking experience with our new air fryers. Our AIR FRY series combines the innovative technology with a commitment to health-conscious living.
                     Discover the future of cooking with V-Fry Fryer's smart air fryers!
-                    </p>
+                </p>
             </div>
 
             <!-- Our Story -->
-            <div class="our-story">
-
+            <div class="full-page-information">
+                <h2 class="title">Inception of <span class="vfry-title theme-yellow">V-Fry</span></h2>
+                <br/>
+                <p class="description">
+                    In the fall of 2023, in the amazing town of Sarnia, Ontario. A group of engineers, culinary enthusiasts, and health-conscious individuals
+                    embarked on a journey that would transform the way people approached cooking. Months of tireless work cumilated in the birth of the very first
+                    series the "AIR FRY" series, a compact air fryer that incorporated cutting-edge technology, and user-friendly design.
+                </p> <br/>
+                <p class="description">
+                    After the success of the AIR FRY series, V-Fry Fryers introduced multiple other series integrating the next-generation interfaces technologies and
+                    frying methods. <br/><br/>
+                    <span>This lead to V-Fry fryers emerging not just as a company but as a culinary moment.</span> 
+                </p>
             </div>
 
-            <!-- Six Reasons -->
 
-            <!-- Our Guarantee -->
+            <!-- Six Reasons -->
+            <div class="full-page-information">
+                <h2 class="title">Why  <span class="vfry-title theme-yellow">V-Fry</span> <span>fryers</span></h2>
+                <br/>
+                <p class="description">what makes v-fry products unique and elegant!</p>
+                <ol class="description vfryer-reasons-list" type="1">
+                    <li>
+                        Advanced Technology <br/>
+                        <span>V-FRY air fryers incorporate cutting-edge technology for efficient and precise cooking results.</span>
+                    </li>
+                    <li>
+                        User-friendly Design <br/>
+                        <span>V-FRY air fryers feature intuitive controls and easy-to-use interfaces, making them accessible to users of all skill levels.</span>
+                    </li>
+                    <li>
+                        Energy Efficiency <br/>
+                        <span>V-FRY appliances are designed with energy efficiency in mind, helping users save on electricity bills while enjoying delicious meals.</span>
+                    </li>
+                    <li>
+                        Advanced Technology <br/>
+                        <span>V-FRY air fryers incorporate cutting-edge technology for efficient and precise cooking results.</span>
+                    </li>
+                    <li>
+                        Compact Size <br/>
+                        <span>Save valuable counter space with VFRY's compact and space-efficient air fryers, ideal for kitchens of all sizes.</span>
+                    </li>
+                    <li>
+                        Warranty Coverage <br/>
+                        <span>VFRY stands behind the quality of its products with comprehensive warranty coverage, offering customers added assurance and support.</span>
+                    </li>
+                </ol>
+            </div>
             
         </main>
 
