Training page - Banner - done

--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
             <ul class="nav-container desktop-tablet" id="menu-items">
                 <li><a href="./index.html">home</a></li>
                 <li><a href="./about.html">about</a></li>
-                <li><a href="./team.html" class="active">our team</a></li>
+                <li><a href="./team.html">our team</a></li>
                 <li><a href="./specials.html">specials</a></li>
                 <li><a href="./training.html">training</a></li>
                 <li><a href="./media.html">media</a></li>
@@ -57,53 +57,9 @@
         </nav>
 
         <main class="team-container" id="team">
-            <article>
-                <section class="full-page-information">
-                    <h1 class="title">Our Team</span></h1>
-                    <br/>
-                    <p class="description">At V-Fry Fryers, our team is a diverse blend of culinary enthusiast, tech innovators, and creative minds. 
-                        United by a shared passion for revolutionizing the kitchen experience, 
-                        we collaborate seamlessly to bring you the best in smart air fryer technology. 
-                        Meet the faces behind the flavor, where expertise meets enthusiasm to shape the future of cooking
-                    </p>
-
-                    <div class="our-team">
-                        <div class="team-member-card">
-                            <img class="team-pic" src="./images/customers/test.webp" alt="Picture of Vaishakh Anil">
-                            <h2>Vaishakh Anil Kumar</h2>
-                            <h3>Founder</h3>
-                        </div>
-
-                        <div class="team-member-card">
-                            <img class="team-pic" src="./images/customers/test.webp" alt="Picture of Dean Winchester">
-                            <h2>Dean Winchester</h2>
-                            <h3>Pie Specialist</h3>
-                        </div>
-
-                        <div class="team-member-card">
-                            <img class="team-pic" src="./images/customers/test.webp" alt="Picture of Sam Winchester">
-                            <h2>Sam Winchester</h2>
-                            <h3>Researcher</h3>
-                        </div>
-                    </div>
-                </section>
-
-                <section class="full-page-information">
-                    <h2 class="title">
-                        Join Us!
-                    </h2>
-                    <br/>
-                    <span class="vfry-title theme-yellow medium-font">Ready to embark on a culinary journey with us? </span>
-                    <p class="description">
-                        Whether you're an aspiring chef or a tech enthusiast, 
-                        we welcome individuals passionate about innovation and flavor to join our dynamic team at V-Fry Fryers. 
-                        Let's redefine the future of cooking together!
-                        <br>
-                        <br>
-                        <span class="small-font">Forward  your resumes to <a href="mailto:c0877469@mylambton.ca">c0877469@mylambton.ca</a></span>
-                    </p>
-                </section>
-            </article>
+            <h1>
+                OOPS YOUR LOST!
+            </h1>
         </main>
 
         <footer>
