--- a/training.html
+++ b/training.html
@@ -25,6 +25,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/training.css">
 
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,11 +60,26 @@
     </nav>
 
     <main class="training-container" id="training">
-        <div>
-            <h1>Training & Past Events</h1>
-            <p>Content</p>
+        <div class="video-banner" class="video-banner">
+            <video src="./media/video/airfry-video2.mp4" autoplay muted loop>
+                Video Does not work in your browser!
+            </video>
+            <div class="full-page-information overlay">
+                <h1 class="title">
+                    Air Fryer Masterclass!
+                </h1>
+                <span class="vfry-title theme-yellow medium-font"> Elevate Your Culinary Skills with Expert Training </span>
+                <br />
+                <p class="description">Welcome to our Air Fryer Masterclass! In these concise sessions, learn the art of
+                    healthy,
+                    flavorful cooking with our cutting-edge V-FRY Products! From essential tips on temperature control to
+                    unleashing the full potential of our smart features,
+                    we'll guide you to culinary excellence. Let's elevate your kitchen skills and make every meal a delight!
+                </p>
+            </div>
         </div>
-        <div class="table-container">
+
+        <div class="table-container" id="schedule">
             <table>
                 <caption>Product Training Schedule</caption>
                 <tr>
