Fixing Training banner

--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
 
         <main class="team-container" id="team">
             <article>
-                <section class="full-page-information">
+                <section class="full-page-information page-height">
                     <h1 class="title">Our Team</span></h1>
                     <br/>
                     <p class="description">At V-Fry Fryers, our team is a diverse blend of culinary enthusiast, tech innovators, and creative minds. 
@@ -88,7 +88,7 @@
                     </div>
                 </section>
 
-                <section class="full-page-information">
+                <section class="full-page-information page-height">
                     <h2 class="title">
                         Join Us!
                     </h2>
