--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         </nav>
 
         <main class="about-container" id="about">
-            <div class="full-page-information">
+            <div class="full-page-information page-height">
                 <h1 class="title">About <span class="vfry-title theme-yellow">V-Fry</span> <span>fryers</span></h1>
                 <br/>
                 <p class="description">V-Fry Fryers, founded in the fall of 2023, headquartered in the beautiful place of Sarnia, Ontario.
@@ -66,7 +66,7 @@
             </div>
 
             <!-- Our Story -->
-            <div class="full-page-information">
+            <div class="full-page-information page-height">
                 <h2 class="title">Inception of <span class="vfry-title theme-yellow">V-Fry</span></h2>
                 <br/>
                 <p class="description">
@@ -83,7 +83,7 @@
 
 
             <!-- Six Reasons -->
-            <div class="full-page-information">
+            <div class="full-page-information page-height">
                 <h2 class="title">Why  <span class="vfry-title theme-yellow">V-Fry</span> <span>fryers</span></h2>
                 <br/>
                 <p class="description">what makes v-fry products unique and elegant!</p>
